security-worker.tf
# Create security group for Worker nodes 
resource "aws_security_group" "worker_node" {
  name        = "worker-nodes-sg"
  vpc_id      = aws_vpc.k8s-vpc.id

  ingress {
      description = "SSH"
      protocol    = "tcp"
      from_port   = 22
      to_port     = 22
      cidr_blocks = ["0.0.0.0/0"]
    }

  ingress {
      description = "HTTPs"
      protocol    = "tcp"
      from_port   = 443
      to_port     = 443
      cidr_blocks = ["0.0.0.0/0"]
    }

  ingress {
      description = "Weavenet"
      protocol    = "tcp"
      from_port   = 6783
      to_port     = 6783
      cidr_blocks = ["0.0.0.0/0"]
    }

  ingress {
      description = "Weavenet"
      protocol    = "udp"
      from_port   = 6784
      to_port     = 6784
      cidr_blocks = ["0.0.0.0/0"]
    }

  ingress {
      description = "Weavenet UDP"
      protocol    = "udp"
      from_port   = 6783
      to_port     = 6783
      cidr_blocks = ["0.0.0.0/0"]
    }

  ingress {
      description = "Kubelet API, Kube-scheduler, Kube-controller-manager"
      protocol    = "tcp"
      from_port   = 10248
      to_port     = 10260
      cidr_blocks = ["0.0.0.0/0"]
    }

  ingress {
      description = "NodePort Service"
      protocol    = "tcp"
      from_port   = 30000
      to_port     = 32767
      cidr_blocks = ["0.0.0.0/0"]
    }

  egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

  tags = {
    Name = "sg-worker-${var.k8s_name}"
  }
}
